Implemented all tests, pagination, caching, debounced search